[build-system]
requires = ["scikit-build-core>=0.7", "cmake>=3.18", "ninja; platform_system!='Windows'"]
build-backend = "scikit_build_core.build"

[project]
name = "stream-loudness-meter"
version = "0.1.0"
description = "Python loudness meter with bundled libebur128"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "lsl666"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
]

[tool.scikit-build]
wheel.packages = ["src/stream_loudness_meter"]
cmake.source-dir = "thirdparty/libebur128"
install.components = [""]              # pick up default install
cmake.version = ">=3.18"
cmake.args = [
    "-DCMAKE_INSTALL_LIBDIR=stream_loudness_meter/libs",
]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
